# FlowPilot

./: .gitignore  README.md  pyproject.toml
flow_engine/: __init__.py  flow_benchmark.py  flow_cluster.py  flow_core.py  flow_dataloader.py  flow_difficulty.py  flow_dsl.py  flow_encoders.py  flow_hybrid.py  flow_learn.py  flow_patterns.py  flow_product.py  flow_runtime.py  flow_sampler.py  flow_selector.py  flow_tensorflow.py  flow_trainer.py
flowpilot/: __init__.py
flowpilot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
flowpilot/core/: __init__.py  block.py  context.py  decision.py
flowpilot/graph/: __init__.py  node.py  pipeline.py
flowpilot/ops/: __init__.py  angle.py  collision.py  distance.py  intercept.py  normalize.py  scoring.py
flowpilot/runtime/: __init__.py  cache.py  clock.py  loop.py  scheduler.py
scripts/: minimal_usage.py  release_gate_check.py  verify_import.py
tests/: test_core.py  test_flow_batch_policy.py  test_graph.py  test_integration.py  test_ops.py  test_release_gate.py  test_runtime.py
